--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "nwtgck's first npm package creation practice",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Ryo Ota",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "mocha": "^3.5.0"
+  }
 }
